--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # -----------------------------------------------------------------------------
 # Site settings
 # -----------------------------------------------------------------------------
-author: SAILING lab
-name: 10-708 PGM
-title: Probabilistic Graphical Models
-email: 10708-instructor@cs.cmu.edu
+author: Peak Lab
+name: INTR_6000P
+title: Visual Navigation for Intelligent Vehicles
+email: changhaochen@hkust-gz.edu.cn
 description: >
-  10-708 - Probabilistic Graphical Models - Carnegie Mellon University - Spring 2019
+  INTR_6000P - Visual Navigation for Intelligent Vehicles - The Hong Kong University of Science and Technology (Guangzhou) - Fall 2025
 footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 
@@ -16,9 +16,9 @@ baseurl: INTR_6000P # the subpath of your site, e.g. /blog/
 # -----------------------------------------------------------------------------
 # Social integration
 # -----------------------------------------------------------------------------
-github_username: sailinglab
-google_analytics: UA-131744305-1
-youtube_channel: UCim-E6bNz7lUyKZwhgN6S1A
+github_username: PeakLab-HKUST-GZ
+google_analytics: #UA-131744305-1
+youtube_channel: #UCim-E6bNz7lUyKZwhgN6S1A
 rss:  # notes rss
 
 # -----------------------------------------------------------------------------
