--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -152,7 +152,7 @@
   lecturer: Changhao Chen
   title: >
     <strong>Non-Linear Optimization</strong>
-  slides: #"https://drive.google.com/file/d/1szM2TsiL8tNYU-MlyTv4vxiFWRitZ_NS"
+  slides: "https://github.com/PeakLab-HKUST-GZ/INTR_6000P/blob/main/assets/slides/Visual%20Navigation%206B.pdf"
   annotated: #"https://drive.google.com/file/d/1McR2fT6qGooQXMLVhOHSQsQ14lcKJKtP"
   video: #"https://scs.hosted.panopto.com/Panopto/
   notes: #"https://sailinglab.github.io/pgm-spring-2019/notes/lecture-01/"
@@ -165,7 +165,7 @@
   lecturer: Changhao Chen
   title: >
     <strong>Scene Reprensentation</strong>
-  slides: #"https://drive.google.com/file/d/1szM2TsiL8tNYU-MlyTv4vxiFWRitZ_NS"
+  slides: "https://github.com/PeakLab-HKUST-GZ/INTR_6000P/blob/main/assets/slides/Visual%20Navigation%207A.pdf"
   annotated: #"https://drive.google.com/file/d/1McR2fT6qGooQXMLVhOHSQsQ14lcKJKtP"
   video: #"https://scs.hosted.panopto.com/Panopto/
   notes: #"https://sailinglab.github.io/pgm-spring-2019/notes/lecture-01/"
@@ -178,7 +178,7 @@
   lecturer: Changhao Chen
   title: >
     <strong>Mapping</strong>
-  slides: #"https://drive.google.com/file/d/1szM2TsiL8tNYU-MlyTv4vxiFWRitZ_NS"
+  slides: "https://github.com/PeakLab-HKUST-GZ/INTR_6000P/blob/main/assets/slides/Visual%20Navigation%207B.pdf"
   annotated: #"https://drive.google.com/file/d/1McR2fT6qGooQXMLVhOHSQsQ14lcKJKtP"
   video: #"https://scs.hosted.panopto.com/Panopto/
   notes: #"https://sailinglab.github.io/pgm-spring-2019/notes/lecture-01/"
@@ -193,7 +193,7 @@
   lecturer: Changhao Chen
   title: >
     <strong>Inertial Integration</strong>
-  slides: #"https://drive.google.com/file/d/1szM2TsiL8tNYU-MlyTv4vxiFWRitZ_NS"
+  slides: "https://github.com/PeakLab-HKUST-GZ/INTR_6000P/blob/main/assets/slides/Visual%20Navigation%208A.pdf"
   annotated: #"https://drive.google.com/file/d/1McR2fT6qGooQXMLVhOHSQsQ14lcKJKtP"
   video: #"https://scs.hosted.panopto.com/Panopto/
   notes: #"https://sailinglab.github.io/pgm-spring-2019/notes/lecture-01/"
@@ -206,7 +206,7 @@
   lecturer: Changhao Chen
   title: >
     <strong>Visual-Inertial Navigation</strong>
-  slides: #"https://drive.google.com/file/d/1szM2TsiL8tNYU-MlyTv4vxiFWRitZ_NS"
+  slides: "https://github.com/PeakLab-HKUST-GZ/INTR_6000P/blob/main/assets/slides/Visual%20Navigation%208B.pdf"
   annotated: #"https://drive.google.com/file/d/1McR2fT6qGooQXMLVhOHSQsQ14lcKJKtP"
   video: #"https://scs.hosted.panopto.com/Panopto/
   notes: #"https://sailinglab.github.io/pgm-spring-2019/notes/lecture-01/"
